Criei um titulo e um paragrafo

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tutorial de Git</title>
 </head>
 <body>
-    
+    <h>Algum titulo</h>
+    <p>Estou apredendo git</p>
 </body>
 </html>
